versions/v2.8/modules/en/pages/installation-and-upgrade/installation-and-upgrade.adoc
= Installing/Upgrading Rancher
:description: Learn how to install Rancher in development and production environments. Read about single node and high availability installation

This section provides an overview of the architecture options of installing Rancher, describing advantages of each option.

== Terminology

In this section,

* *The Rancher server* manages and provisions Kubernetes clusters. You can interact with downstream Kubernetes clusters through the Rancher server's user interface. The Rancher management server can be installed on any Kubernetes cluster, including hosted clusters, such as Amazon EKS clusters.
* *RKE (Rancher Kubernetes Engine)* is a certified Kubernetes distribution and CLI/library which creates and manages a Kubernetes cluster.
* *K3s (Lightweight Kubernetes)* is also a fully compliant Kubernetes distribution. It is newer than RKE, easier to use, and more lightweight, with a binary size of less than 100 MB.
* *RKE2* is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector.

Note the `restrictedAdmin` Helm chart option available for *the Rancher Server*. When this option is set to true, the initial Rancher user has restricted access to the local Kubernetes cluster to prevent privilege escalation. For more information, see the section about the xref:../rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc#_restricted_admin[restricted-admin role.]

== Overview of Installation Options

Rancher can be installed on these main architectures:

=== High-availability Kubernetes Install with the Helm CLI

We recommend using Helm, a Kubernetes package manager, to install Rancher on multiple nodes on a dedicated Kubernetes cluster. For RKE clusters, three nodes are required to achieve a high-availability cluster. For K3s clusters, only two nodes are required.

=== Rancher on EKS Install with the AWS Marketplace

Rancher can be installed on to Amazon Elastic Kubernetes Service (EKS) xref:quick-start/deploy-rancher/aws-marketplace.adoc[through the AWS Marketplace]. The EKS cluster deployed is production-ready and follows AWS best practices.

=== Single-node Kubernetes Install

Rancher can be installed on a single-node Kubernetes cluster. In this case, the Rancher server doesn't have high availability, which is important for running Rancher in production.

However, this option is useful if you want to save resources by using a single node in the short term, while preserving a high-availability migration path. In the future, you can add nodes to the cluster to get a high-availability Rancher server.

=== Docker Install

For test and demonstration purposes, Rancher can be installed with Docker on a single node. A local Kubernetes cluster is installed in the single Docker container, and Rancher is installed on the local cluster.

The Rancher backup operator can be used to migrate Rancher from the single Docker container install to an installation on a high-availability Kubernetes cluster. For details, refer to the documentation on xref:../rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc[migrating Rancher to a new cluster.]

=== Other Options

There are also separate instructions for installing Rancher in an air gap environment or behind an HTTP proxy:

|===
| Level of Internet Access | Kubernetes Installation - Strongly Recommended | Docker Installation

| With direct access to the Internet
| xref:install-rancher.adoc[Docs]
| xref:../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/rancher-on-a-single-node-with-docker.adoc[Docs]

| Behind an HTTP proxy
| xref:other-installation-methods/http-proxy/behind-an-http-proxy.adoc[Docs]
| These xref:../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/rancher-on-a-single-node-with-docker.adoc[docs,] plus this xref:../reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc[configuration]

| In an air gap environment
| xref:other-installation-methods/air-gapped/air-gapped.adoc[Docs]
| xref:other-installation-methods/air-gapped/air-gapped.adoc[Docs]
|===

We recommend installing Rancher on a Kubernetes cluster, because in a multi-node cluster, the Rancher management server becomes highly available. This high-availability configuration helps maintain consistent access to the downstream Kubernetes clusters that Rancher will manage.

For that reason, we recommend that for a production-grade architecture, you should set up a high-availability Kubernetes cluster, then install Rancher on it. After Rancher is installed, you can use Rancher to deploy and manage Kubernetes clusters.

For testing or demonstration purposes, you can install Rancher in single Docker container. In this Docker install, you can use Rancher to set up Kubernetes clusters out-of-the-box. The Docker install allows you to explore the Rancher server functionality, but it is intended to be used for development and testing purposes only.

Our xref:install-rancher.adoc[instructions for installing Rancher on Kubernetes] describe how to first use K3s or RKE to create and manage a Kubernetes cluster, then install Rancher onto that cluster.

When the nodes in your Kubernetes cluster are running and fulfill the xref:requirements/requirements.adoc[node requirements,] you will use Helm to deploy Rancher onto Kubernetes. Helm uses Rancher's Helm chart to install a replica of Rancher on each node in the Kubernetes cluster. We recommend using a load balancer to direct traffic to each replica of Rancher in the cluster.

For a longer discussion of Rancher architecture, refer to the xref:../about-rancher/architecture/architecture.adoc[architecture overview,] xref:../about-rancher/architecture/recommendations.adoc[recommendations for production-grade architecture,] or our xref:best-practices/tips-for-running-rancher.adoc[best practices guide.]

== Prerequisites

Before installing Rancher, make sure that your nodes fulfill all of the xref:requirements/requirements.adoc[installation requirements.]

== Architecture Tip

For the best performance and greater security, we recommend a separate, dedicated Kubernetes cluster for the Rancher management server. Running user workloads on this cluster is not advised. After deploying Rancher, you can xref:../cluster-deployment/cluster-deployment.adoc[create or import clusters] for running your workloads.

For more architecture recommendations, refer to xref:../about-rancher/architecture/recommendations.adoc[this page.]

=== More Options for Installations on a Kubernetes Cluster

Refer to the xref:references/helm-chart-options.adoc[Helm chart options] for details on installing Rancher on a Kubernetes cluster with other configurations, including:

* With link:references/helm-chart-options.adoc#api-audit-log[API auditing to record all transactions]
* With link:references/helm-chart-options.adoc#external-tls-termination[TLS termination on a load balancer]
* With a link:references/helm-chart-options.adoc#customizing-your-ingress[custom Ingress]

In the Rancher installation instructions, we recommend using K3s or RKE to set up a Kubernetes cluster before installing Rancher on the cluster. Both K3s and RKE have many configuration options for customizing the Kubernetes cluster to suit your specific environment. For the full list of their capabilities, refer to their documentation:

* https://rancher.com/docs/rke/latest/en/config-options/[RKE configuration options]
* https://rancher.com/docs/k3s/latest/en/installation/install-options/[K3s configuration options]

=== More Options for Installations with Docker

Refer to the xref:../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/rancher-on-a-single-node-with-docker.adoc[docs about options for Docker installs] for details about other configurations including:

* With xref:../reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_api_audit_log[API auditing to record all transactions]
* With an xref:infrastructure-setup/configure-layer-7-nginx-load-balancer.adoc[external load balancer]
* With a xref:../reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_persistent_data[persistent data store]
