versions/v2.9/modules/en/pages/installation-and-upgrade/installation-and-upgrade.adoc
= Installing {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2024-09-30
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/index.adoc 
:product-path: installation-and-upgrade/installation-and-upgrade.adoc
:description: Learn how to install Rancher in development and production environments. Read about single node and high availability installation
ifeval::["{build-type}" != "community"]
:xref-install-rancher: xref:installation-and-upgrade/install-rancher.adoc
:xref-arch-rec: xref:about-rancher/architecture/recommendations.adoc
:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
:xref-install-reqs: xref:installation-and-upgrade/requirements/requirements.adoc
:xref-global-permissions: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
:xref-cluster-deployment: xref:cluster-deployment/cluster-deployment.adoc
:xref-air-gap: xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
:xref-migrate-cluster: xref:rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
:xref-rancher-architecture: xref:about-rancher/architecture/architecture.adoc
:xref-tips-for-running-rancher: xref:installation-and-upgrade/best-practices/tips-for-running-rancher.adoc
:xref-qs-aws-marketplace: xref:installation-and-upgrade/quick-start/deploy-rancher/aws-marketplace.adoc
:xref-http-proxy: xref:installation-and-upgrade/other-installation-methods/http-proxy/http-proxy.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-install-rancher: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/index.adoc
:xref-arch-rec: xref:reference-guides/rancher-manager-architecture/architecture-recommendations.adoc
:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
:xref-install-reqs: xref:getting-started/installation-and-upgrade/installation-requirements/index.adoc 
:xref-global-permissions: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/global-permissions.adoc 
:xref-cluster-deployment: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/index.adoc
:xref-air-gap: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/index.adoc
:xref-migrate-cluster: xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc
:xref-rancher-architecture: xref:reference-guides/rancher-manager-architecture/index.adoc
:xref-tips-for-running-rancher: xref:reference-guides/best-practices/rancher-server/tips-for-running-rancher.adoc
:xref-qs-aws-marketplace: xref:getting-started/quick-start-guides/deploy-rancher-manager/aws-marketplace.adoc
:xref-http-proxy: xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/index.adoc
endif::[]

This section provides an overview of the architecture options of installing Rancher, describing advantages of each option.

== Terminology

* *The Rancher server* manages and provisions Kubernetes clusters. You can interact with downstream Kubernetes clusters through the Rancher server's user interface. The Rancher management server can be installed on any Kubernetes cluster, including hosted clusters, such as Amazon EKS clusters.
* *RKE (Rancher Kubernetes Engine)* is a certified Kubernetes distribution and CLI/library which creates and manages a Kubernetes cluster.
* *K3s (Lightweight Kubernetes)* is also a fully compliant Kubernetes distribution. It is newer than RKE, easier to use, and more lightweight, with a binary size of less than 100 MB.
* *RKE2* is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector.

Note the `restrictedAdmin` Helm chart option available for *the Rancher Server*. When this option is set to true, the initial Rancher user has restricted access to the local Kubernetes cluster to prevent privilege escalation. For more information, see the section about the {xref-global-permissions}#_restricted_admin[restricted-admin role.]

== Overview of Installation Options

Rancher can be installed on these main architectures.

=== High-availability Kubernetes Install with the Helm CLI

We recommend using Helm, a Kubernetes package manager, to install Rancher on multiple nodes on a dedicated Kubernetes cluster. For RKE clusters, three nodes are required to achieve a high-availability cluster. For K3s clusters, only two nodes are required.

=== Rancher on EKS Install with the AWS Marketplace

Rancher can be installed on to Amazon Elastic Kubernetes Service (EKS) {xref-qs-aws-marketplace}[through the AWS Marketplace]. The EKS cluster deployed is production-ready and follows AWS best practices.

=== Single-node Kubernetes Install

Rancher can be installed on a single-node Kubernetes cluster. In this case, the Rancher server doesn't have high availability, which is important for running Rancher in production.

However, this option is useful if you want to save resources by using a single node in the short term, while preserving a high-availability migration path. In the future, you can add nodes to the cluster to get a high-availability Rancher server.

ifeval::["{build-type}" == "community"]
[#_docker_install]
=== Docker Install

For test and demonstration purposes, Rancher can be installed with Docker on a single node. A local Kubernetes cluster is installed in the single Docker container, and Rancher is installed on the local cluster.

The Rancher backup operator can be used to migrate Rancher from the single Docker container install to an installation on a high-availability Kubernetes cluster. For details, refer to the documentation on {xref-migrate-cluster}[migrating Rancher to a new cluster.]
endif::[]

=== Other Options

There are also separate instructions for installing Rancher in an air gap environment or behind an HTTP proxy:

ifeval::["{build-type}" != "community"]
|===
| Level of Internet Access | Kubernetes Installation - Strongly Recommended

| With direct access to the Internet
| {xref-install-rancher}[Docs]

| Behind an HTTP proxy
| {xref-http-proxy}[Docs]

| In an air gap environment
| {xref-air-gap}[Docs]
|===
endif::[]

ifeval::["{build-type}" == "community"]
|===
| Level of Internet Access | Kubernetes Installation - Strongly Recommended | Docker Installation

| With direct access to the Internet
| {xref-install-rancher}[Docs]
| xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc[Docs]

| Behind an HTTP proxy
| {xref-http-proxy}[Docs]
| These xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker.adoc[Docs] plus this xref:reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc[Configuration]

| In an air gap environment
| {xref-air-gap}[Docs]
| xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/index.adoc[Docs]
|===
endif::[]

We recommend installing Rancher on a Kubernetes cluster, because in a multi-node cluster, the Rancher management server becomes highly available. This high-availability configuration helps maintain consistent access to the downstream Kubernetes clusters that Rancher will manage.

For that reason, we recommend that for a production-grade architecture, you should set up a high-availability Kubernetes cluster, then install Rancher on it. After Rancher is installed, you can use Rancher to deploy and manage Kubernetes clusters.

ifeval::["{build-type}" == "community"]
For testing or demonstration purposes, you can install Rancher in single Docker container. In this Docker install, you can use Rancher to set up Kubernetes clusters out-of-the-box. The Docker install allows you to explore the Rancher server functionality, but it is intended to be used for development and testing purposes only.
endif::[]

Our {xref-install-rancher}[instructions for installing Rancher on Kubernetes] describe how to first use K3s or RKE to create and manage a Kubernetes cluster, then install Rancher onto that cluster.

When the nodes in your Kubernetes cluster are running and fulfill the {xref-install-reqs}[node requirements,] you will use Helm to deploy Rancher onto Kubernetes. Helm uses Rancher's Helm chart to install a replica of Rancher on each node in the Kubernetes cluster. We recommend using a load balancer to direct traffic to each replica of Rancher in the cluster.

For a longer discussion of Rancher architecture, refer to the {xref-rancher-architecture}[architecture overview,] {xref-arch-rec}[recommendations for production-grade architecture,] or our {xref-tips-for-running-rancher}[best practices guide.]

== Prerequisites

Before installing Rancher, make sure that your nodes fulfill all of the {xref-install-reqs}[installation requirements.]

== Architecture Tip

For the best performance and greater security, we recommend a separate, dedicated Kubernetes cluster for the Rancher management server. Running user workloads on this cluster is not advised. After deploying Rancher, you can {xref-cluster-deployment}[create or import clusters] for running your workloads.

For more architecture recommendations, refer to {xref-arch-rec}[this page.]

=== More Options for Installations on a Kubernetes Cluster

Refer to the {xref-helm-chart-options}[Helm chart options] for details on installing Rancher on a Kubernetes cluster with other configurations, including:

* With {xref-helm-chart-options}#_api_audit_log[API auditing to record all transactions]
* With {xref-helm-chart-options}#_external_tls_termination[TLS termination on a load balancer]
* With a {xref-helm-chart-options}#_customizing_your_ingress[custom Ingress]

In the Rancher installation instructions, we recommend using K3s or RKE to set up a Kubernetes cluster before installing Rancher on the cluster. Both K3s and RKE have many configuration options for customizing the Kubernetes cluster to suit your specific environment. For the full list of their capabilities, refer to their documentation:

* https://rancher.com/docs/rke/latest/en/config-options/[RKE configuration options]
* https://rancher.com/docs/k3s/latest/en/installation/install-options/[K3s configuration options]

